fix: use gethostname() to set host attribute as this works on a cluster whereas reading the COMPUTERNAME env var doesn't.
--HG--
branch : fix

--- a/sbsv2/raptor/util/talon/Makefile
+++ b/sbsv2/raptor/util/talon/Makefile
@@ -29,6 +29,7 @@ LDFLAGS:=$(subst \,/,$(SBS_HOME:\=/)\win32\mingw\lib\libiberty.a)
 else
 LDFLAGS:=$(subst \,/,$(SBS_MINGW:\=/)\lib\libiberty.a)
 endif
+LDFLAGS:=$(LDFLAGS) -Wl,-lws2_32
 else
 CHOMP_C:=
 PROCESS_C:=process.c
