--- a/sbsv2/raptor/lib/flm/build.xml
+++ b/sbsv2/raptor/lib/flm/build.xml
@@ -4,7 +4,7 @@
 	<interface name="build.makefiles" extends="base.flm" flm='build.flm' >
 		<param name='SBS_BUILD_DIR' /> 
 		<param name='DATE' /> 
-		<param name='COMPONENT_PATHS' />
+		<param name='PP_SYSTEM_DEFINITION' />
 		<param name='MAKEFILE_PATH' />
 		<param name='CONFIGS' default=''/>
 		<param name='CLI_OPTIONS' default=''/>
