--- a/imgtools/romtools/group/rombuild.vcproj
+++ b/imgtools/romtools/group/rombuild.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../imglib/boostlibrary;../../imglib/boostlibrary/boost;../rombuild;../../imglib/inc;../../imglib/compress;../../imglib/memmap/include;../../imglib/patchdataprocessor/include;../../imglib/parameterfileprocessor/include;../../imglib/uniconv/include"
+				AdditionalIncludeDirectories="../../imglib/boostlibrary;../../imglib/boostlibrary/boost;../rombuild;../../imglib/inc;../../imglib/compress;../../imglib/memmap/include;../../imglib/patchdataprocessor/include;../../imglib/parameterfileprocessor/include;../../imglib/uniconv/include;../../imglib/symbolutil"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;__MSVCDOTNET__;__TOOLS__ ;__VC32__;_STLP_DEBUG=1;__OPERATOR_NEW_DECLARED__;snprintf=_snprintf"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -125,7 +125,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../imglib/boostlibrary;../../imglib/boostlibrary/boost;../rombuild;../../imglib/inc;../../imglib/compress;../../imglib/memmap/include;../../imglib/patchdataprocessor/include;../../imglib/parameterfileprocessor/include;../../imglib/uniconv/include"
+				AdditionalIncludeDirectories="../../imglib/boostlibrary;../../imglib/boostlibrary/boost;../rombuild;../../imglib/inc;../../imglib/compress;../../imglib/memmap/include;../../imglib/patchdataprocessor/include;../../imglib/parameterfileprocessor/include;../../imglib/uniconv/include;../../imglib/symbolutil"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;__MSVCDOTNET__;__TOOLS__ ;__VC32__;__OPERATOR_NEW_DECLARED__;snprintf=_snprintf"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -237,10 +237,6 @@
 				RelativePath="..\rombuild\rombuild.cpp"
 				>
 			</File>
-			<File
-				RelativePath="..\rombuild\symbolgenerator.cpp"
-				>
-			</File>
 			<Filter
 				Name="e32image"
 				>
@@ -342,6 +338,30 @@
 				>
 				<File
 					RelativePath="..\..\imglib\uniconv\source\uniconv.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="symbolutil"
+				>
+				<File
+					RelativePath="..\..\imglib\symbolutil\bsymutil.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\loggingexception.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\logparser.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\symbolgenerator.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\symbolprocessunit.cpp"
 					>
 				</File>
 			</Filter>
@@ -464,6 +484,30 @@
 				>
 				<File
 					RelativePath="..\..\imglib\uniconv\include\uniconv.hpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="symbolutil"
+				>
+				<File
+					RelativePath="..\..\imglib\symbolutil\bsymutil.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\loggingexception.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\logparser.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\symbolgenerator.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\imglib\symbolutil\symbolprocessunit.h"
 					>
 				</File>
 			</Filter>
